k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:                 # ← Pod definition starts here
    metadata:
      labels:
        app: mongo

    spec:
      containers:
        - name: mongo
          image: mongo:7

          ports:
            - containerPort: 27017

          readinessProbe:
            exec:
              command:
                - mongosh
                - --quiet
                - --eval
                - "db.adminCommand('ping').ok"
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            exec:
              command:
                - mongosh
                - --quiet
                - --eval
                - "db.adminCommand('ping').ok"
            initialDelaySeconds: 15
            periodSeconds: 10
