k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: climbing-management-ingress

spec:
  ingressClassName: nginx

  rules:
    # Requests to http://climbing-management.local/
    # are routed to climbing-management-service:8080.
    - host: climbing-management.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: climbing-management-service
                port:
                  number: 8080

#   Browser
#     │
#     │ http://climbing-management.local
#     ▼
#   NGINX Ingress Controller
#     │
#     │ Ingress rule
#     ▼
#  climbing-management-service
#     │
#     ├──────────────┐
#     ▼              ▼
#     Pod 1            Pod 2
